cluster/apps/networking/multus-shit.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  annotations:
    deprecated.daemonset.template.generation: "3"
    meta.helm.sh/release-name: multus
    meta.helm.sh/release-namespace: system
  creationTimestamp: "2022-12-19T15:23:32Z"
  generation: 3
  labels:
    app.kubernetes.io/instance: multus
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: multus
    app.kubernetes.io/version: v3.7.1
    helm.sh/chart: multus-4.0.0
    helm.toolkit.fluxcd.io/name: multus
    helm.toolkit.fluxcd.io/namespace: system
  name: multus
  namespace: system
  resourceVersion: "29167662"
  uid: 101b4cdd-6479-49c7-86ed-1e041a615781
spec:
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/instance: multus
      app.kubernetes.io/name: multus
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: multus
        app.kubernetes.io/name: multus
    spec:
      automountServiceAccountToken: true
      containers:
        - args:
            - --multus-conf-file=auto
            - --cleanup-config-on-exit=true
            - --multus-log-level=debug
            - --multus-log-file=/etc/cni/net.d/multus.d/the-log.log
            - --cni-version=0.3.1
            - --multus-kubeconfig-file-host=/etc/cni/net.d/multus.d/multus.kubeconfig
          command:
            - /entrypoint.sh
          image: ghcr.io/k8snetworkplumbingwg/multus-cni:v3.9.3
          imagePullPolicy: IfNotPresent
          name: multus
          resources: {}
          securityContext:
            privileged: true
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /host/etc/cni/net.d
              name: cni
            - mountPath: /host/opt/cni/bin
              name: cnibin
      dnsPolicy: ClusterFirstWithHostNet
      enableServiceLinks: true
      hostNetwork: true
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: multus
      serviceAccountName: multus
      terminationGracePeriodSeconds: 30
      tolerations:
        - effect: NoSchedule
          operator: Exists
        - effect: NoExecute
          operator: Exists
      volumes:
        - hostPath:
            path: /etc/cni/net.d
            type: Directory
          name: cni
        - hostPath:
            path: /opt/cni/bin
            type: Directory
          name: cnibin
  updateStrategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
