cluster/apps/networking/netshoot.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netshoot
  namespace: networking
  labels:
    app: netshoot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: netshoot
  template:
    metadata:
      labels:
        app: netshoot
    spec:
      containers:
        - name: netshoot
          image: nicolaka/netshoot
          command:
            - /bin/sh
            - -c
            - sleep infinity
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - "k8s-worker-amd64-3"
